v3.8.8 (XXXX-XX-XX)
-------------------

* Updated arangosync to v2.12.0.

* Updated ArangoDB Starter to 0.15.5.

* Do not drop follower shard after too many failed shard synchronization
  attempts.

* Disable optimization rule to avoid crash (BTS-951).

* Fixed SEARCH-366: Fixed extracting sub-attributes using projections for the
  `_id` attribute (e.g. `RETURN doc.sub._id`).

* Fixed BTS-926: UI showing the "create index" form to non-admin users.

* Add progress reporting to RocksDB WAL recovery, in case there are many WAL
  files to recover.

* Web UI: Now correctly handles the server error response when an error occurred
  during the modification of a document or an edge (BTS-934).

* Make graph search case-insensitive (fixes BTS-882).

* Improve error handling for passing wrong transaction ids / cursor ids / pregel
  job ids to request forwarding. Also prevent the error "transaction id not
  found" in cases when request forwarding was tried to a coordinator that was
  recently restarted.

* BTS-907: Fixed some rare SortNode related optimizer issues, when at least two
  or more SortNodes appeared in the AQL execution plan.

* Fixed BTS-852 (user's saved queries used to disappear after updating user
  profile).

* BTS-913: check for proper timezone setup of the system on startup.
  This evades errors that else would only occur in AQL-Functions at runtime.

* Fixed BTS-851: "Could not fetch the applier state of: undefined".

* Since ArangoDB 3.8 there was a loophole for creating duplicate keys in the
  same collection. The requirements were:
  - cluster deployment
  - needs at least two collections (source and target), and the target
    collection must have more than one shard and must use a custom shard key.
  - inserting documents into the target collection must have happened via an AQL
    query like `FOR doc IN source INSERT doc INTO target`.
  In this particular combination, the document keys (`_key` attribute) from the